# yaca

./: .gitignore  README.md  constants.py  docker-compose.yml  main.py  pyproject.toml  schemas.py
alembic/: env.py
alembic/versions/: d2e287216d3c_add_conversations_and_chat_messages.py
config/: config.py
db/: __init__.py  models.py  session.py
llm/: llm_chat.py
routers/: chat.py  conversation.py
services/: conversation_service.py
static/: index.html
