[project]
name = "prac-set"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "botocore>=1.43.14",
    "fastapi>=0.136.3",
    "langchain>=1.3.1",
    "langchain-litellm>=0.6.6",
    "langgraph>=1.2.1",
    "litellm>=1.86.0",
    "loguru>=0.7.3",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy[asyncio]>=2.0.50",
    "uvicorn>=0.48.0",
]
